Genesis before refactoring for OEM719 transmission.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
         "starm-clangd",
         "--query-driver=${env:CUBE_BUNDLE_PATH}/st-arm-clang/19.1.6+st.9/bin/starm-clang",
         "--query-driver=${env:CUBE_BUNDLE_PATH}/st-arm-clang/19.1.6+st.9/bin/starm-clang++"
-    ]
+    ],
+    "stm32-for-vscode.openOCDPath": "/home/zuzu/.config/Cursor/User/globalStorage/bmd.stm32-for-vscode/@xpack-dev-tools/openocd/0.12.0-7.1/.content/bin/openocd",
+    "stm32-for-vscode.armToolchainPath": "/home/zuzu/.config/Cursor/User/globalStorage/bmd.stm32-for-vscode/@xpack-dev-tools/arm-none-eabi-gcc/14.2.1-1.1.1/.content/bin"
 }
